[package]
name = "pixelize"
version = "0.1.3"
authors = ["Shawn Lim <shawn@storyline.io>"]
edition = "2018"
license = "GPL-3.0-only"
description = "A CLI tool to pixelate your supplied image."
readme = "README.md"
homepage = "https://github.com/geekyme/pixelize"
repository = "https://github.com/geekyme/pixelize"
keywords = ["cli", "image", "pixelate"]
categories = ["command-line-utilities"]

[dependencies]
image = "0.22.4"
clap = "2.33.0"